specify licence and repository in each Cargo.toml to fix cargo2nix build

--- a/include_gif/Cargo.toml
+++ b/include_gif/Cargo.toml
@@ -2,8 +2,8 @@
 name = "include_gif"
 version = "1.0.1"
 edition = "2021"
-license.workspace = true
-repository.workspace = true
+license = "Apache-2.0"
+repository = "https://github.com/LedgerHQ/ledger-device-rust-sdk"
 description = "procedural macro that packs a gif image into a byte representation"
 
 [lib]
