--- a/ledger_device_sdk/Cargo.toml
+++ b/ledger_device_sdk/Cargo.toml
@@ -3,8 +3,8 @@ name = "ledger_device_sdk"
 version = "1.4.3"
 authors = ["yhql", "yogh333"]
 edition = "2021"
-license.workspace = true
-repository.workspace = true
+license = "Apache-2.0"
+repository = "https://github.com/LedgerHQ/ledger-device-rust-sdk"
 description = "Ledger device Rust SDK"
 
 [dev-dependencies]
