--- a/ledger_secure_sdk_sys/Cargo.toml
+++ b/ledger_secure_sdk_sys/Cargo.toml
@@ -3,8 +3,8 @@ name = "ledger_secure_sdk_sys"
 version = "1.1.0"
 authors = ["yhql"]
 edition = "2021"
-license.workspace = true
-repository.workspace = true
+license = "Apache-2.0"
+repository = "https://github.com/LedgerHQ/ledger-device-rust-sdk"
 description = "Bindings to Ledger C SDK"
 
 [build-dependencies]
